Fix: nav-var not visible on friends page.

--- a/revised-ver/css/components/alt-header.css
+++ b/revised-ver/css/components/alt-header.css
@@ -11,7 +11,6 @@
   box-sizing: border-box;
   font-size: 18px;
   background-color: white;
-  z-index: 1;
 }
 
 .alt-header__column {
