--- a/revised-ver/css/screens/chat.css
+++ b/revised-ver/css/screens/chat.css
@@ -3,7 +3,12 @@
 }
 
 #chat-screen .alt-header {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.432);
+}
+
+#chat-screen .status-bar {
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1;
 }
 
 .main-chat {
