--- a/revised-ver/css/screens/friends.css
+++ b/revised-ver/css/screens/friends.css
@@ -1,5 +1,6 @@
 .friends-screen {
   margin-top: 4px;
+  overflow: hidden;
 }
 
 .friends-screen__group-title {
